--- a/src/assets/allWeb.css
+++ b/src/assets/allWeb.css
@@ -1,5 +1,5 @@
 body{
     /*background: url('public/fish.jpg') no-repeat center center fixed;
     background-size: cover;*/
-    background-color: #f5f5f5;
+    background-color: rgb(255, 255, 255);
 }
